# stellar-trust-escrow

./: Cargo.toml  package-lock.json
.husky/: pre-commit.sh  pre-push.sh
backend/: .env.example  server.js
backend/api/controllers/: kycController.js  paymentController.js
backend/api/routes/: auditRoutes.js  disputeRoutes.js  escrowRoutes.js  kycRoutes.js  paymentRoutes.js  reputationRoutes.js  userRoutes.js
backend/database/: schema.prisma
backend/lib/: cache.js
backend/middleware/: cache.js
backend/services/: cacheService.js  kycService.js  paymentService.js
backend/tests/: emailService.test.js
contracts/escrow_contract/: Cargo.toml
contracts/escrow_contract/src/: events.rs  lib.rs
contracts/escrow_contract/test_snapshots/tests/: test_create_escrow_packs_metadata_separately.1.json  test_get_milestone_reads_granular_storage_entry.1.json  test_get_reputation_returns_default_record.1.json
frontend/app/kyc/: page.jsx
frontend/app/kyc/admin/: page.jsx
frontend/components/ui/: Badge.jsx
